<resources>
    <string name="clear_content">清空</string>
    <string name="app_name">译站</string>
    <string name="exchange">语言互换</string>
    <string name="copy_content">复制结果</string>
    <string name="speak">朗读</string>
    <string name="expand">展开</string>
    <string name="nav_main">翻译</string>
    <string name="nav_settings">设置</string>
    <string name="nav_plugin">插件</string>
    <string name="engine">翻译引擎</string>
    <string name="engine_baidu">百度翻译</string>
    <string name="engine_youdao_easy">有道翻译(简版)</string>
    <string name="engine_youdao_normal">有道翻译</string>
    <string name="engine_jinshan">金山翻译</string>
    <string name="engine_google">谷歌翻译</string>
    <string name="error_result">翻译错误</string>
    <string name="engine_bv2av">BvToAv</string>
    <string name="engine_each_text">逐字翻译</string>
    <string name="translate">翻译</string>
    <string name="snack_quit">再次点击以退出</string>
    <string name="engine_bigger_text">字符放大</string>
    <string name="snack_no_engine_selected">未选中任何翻译引擎！</string>
    <string name="snack_finish_copy">已复制结果到剪切板！</string>
    <string name="snack_speak_error">朗读过程发生错误！</string>
    <string name="comming_soon">正在建设中</string>
    <string name="sponser">赞助</string>
    <string name="manage_plugins">插件管理</string>
    <string name="delete_plugin">删除</string>
    <string name="message_confirm">确认</string>
    <string name="message_yes">确认</string>
    <string name="message_delete_plugin">您确定要删除此插件吗？此操作不可被恢复</string>
    <string name="import_plugin">导入插件</string>
    <string name="create_plugin">新建文件</string>
    <string name="bind_engine">内置引擎</string>
    <string name="plugin_engine">插件</string>
    <string name="engine_select">设置引擎</string>
    <string name="nav_thanks">致谢</string>
    <string name="thanks">致谢</string>
    <string name="join_sponsor">成为赞助者</string>
    <string name="loading_error">加载错误，点击重试</string>
    <string name="dialog_new_size">新版本大小：%s</string>
    <string name="install_plugin">安装</string>
    <string name="update_plugin">更新</string>
    <string name="uninstall_plugin">卸载</string>
    <string name="online_plugin">在线插件</string>
    <string name="setting_show_status_bar">显示状态栏</string>
    <string name="setting_ui">页面设置</string>
    <string name="message_out_of_max_engine_limit">您最多可以同时选择%d个引擎进行翻译，当前数量：%d</string>
    <string name="message_stop_translate">当前翻译已终止</string>
    <string name="setting_show_float_window">显示悬浮窗</string>
    <string name="setting_spring_theme">启用春节限定主题</string>
    <string name="single_translate_text">译</string>
    <string name="about_float_window">关于悬浮窗</string>
    <string name="about">关于</string>
    <string name="open_source_library">开源项目</string>
    <string name="refresh">刷新</string>
    <string name="open_with_browser">浏览器打开</string>
    <string name="welcome_star">欢迎star~</string>
    <string name="source_code">项目源代码</string>
    <string name="privacy">隐私政策</string>
    <string name="setting_hide_nav_bar">隐藏底部栏</string>
    <string name="crash">崩溃</string>
    <string name="float_ball">悬浮球</string>
    <string name="trans_error">翻译失败！原因是：%s</string>
    <string name="setting_hide_status_bar">隐藏状态栏</string>
    <string name="open_app">打开应用查询</string>
    <string name="sort_result">结果排序</string>
    <string name="sponsor_tip">荣誉赞助者为译站Pro上线之前无偿赞助过译站的所有用户，所有人无论赞助金额大小均可凭付款凭证找开发者免费领取500天会员。\n感谢您在应用初期的大力支持，应用将永久铭记！</string>
    <string name="others">其他</string>
    <string name="custom_nav">新导航栏</string>
    <string name="tip">提示</string>
    <string name="not_agree">拒绝</string>
    <string name="agree">同意</string>
    <string name="select_language">语种选择</string>
    <string name="tip_privacy_policy">请认真阅读并同意[隐私政策](https://api.funnysaltyfish.fun/trans/v1/api/privacy)后，方可使用本应用</string>
    <string name="action_expand_or_close_select_engines">点击%s引擎选择页面</string>
    <string name="action_see_notice_detail">查看公告详情</string>
    <string name="des_current_source_lang">当前选中的源语言</string>
    <string name="des_current_target_lang">当前选中的目标语言</string>
    <string name="float_window_tip">悬浮窗使用需要权限，请正确授予相应权限\n悬浮球可拖动，移动至指定位置即可删除。翻译悬浮窗右下角可直接打开应用\n将悬浮球拖动到某位置固定两秒，将可以触发区域截屏翻译，框选区域后即可跳转翻译\n长按悬浮球可直接翻译当前屏幕内容</string>
    <string name="empty_plugin_tip">空空如也~\n去添加一个插件试试吧</string>
    <string name="user_profile">用户信息</string>
    <string name="setting_enter_to_translate">回车键翻译</string>
    <string name="setting_show_history">显示历史记录</string>
    <string name="setting_trans_page_input_bottom">输入栏置底</string>
    <string name="avatar">头像</string>
    <string name="send_report">发送报告</string>
    <string name="engine_tencent">腾讯翻译</string>
    <string name="login_or_register">登录/注册</string>
    <string name="sort">排序</string>
    <string name="sort_by_date_asc">按时间（从远到近）</string>
    <string name="sort_by_date_desc">按时间（从近到远）</string>
    <string name="sort_by_money_asc">按金额（从小到大）</string>
    <string name="sort_by_money_desc">按金额（从大到小）</string>
    <string name="setting_text_menu_floating_window">文本菜单悬浮窗</string>
    <string name="setting_text_menu_floating_window_desc">长按选择文本后，跳转翻译时打开悬浮窗（首次需打开应用本体，保持在后台后即可正常使用。如没有反应，请尝试手动打开应用的悬浮窗权限）</string>
    <string name="setting_auto_focus">自动打开软键盘</string>
    <string name="annual_report">年度翻译报告</string>
    <string name="confirm_delete_history_desc">您确认删除所有本地历史记录？该操作不可逆，请谨慎选择</string>
    <string name="clear_trans_history">清空历史记录</string>
    <string name="need_camera_permission_tip">图片翻译功能说明：\n图片翻译基于第三方引擎，因成本较为昂贵，图片翻译仅限于登录用户使用，且每人每月默认10点配额，1号重置。每次翻译消耗通常为1点，其余特殊点数会标出。\n\n需要您授予拍照权限才能正常使用</string>
    <string name="album">相册</string>
    <string name="modify_password">修改密码</string>
    <string name="img_remaining_points">剩余图片翻译点数</string>
    <string name="setting_show_image_trans_btn">显示图片翻译按钮</string>
    <string name="trans_pro">译站 Pro</string>
    <string name="alipay">支付宝</string>
    <string name="wechat_pay">微信支付</string>
    <string name="buy_number">购买数量</string>
    <string name="buy">立即购买</string>
    <string name="hornor_sponsor">荣誉赞助者</string>
    <string name="vip_end_time">会员到期时间</string>
    <string name="parallel_trans">并行翻译</string>
    <string name="parallel_trans_desc">翻译时所有引擎同步翻译，大幅提高翻译速度</string>
    <string name="theme">主题</string>
    <string name="speak_source_string">朗读原文</string>
    <string name="join_qq_group">加入Q群</string>
    <string name="message_out_of_max_engine_limit_novip">您最高只能选择%d个引擎，升级VIP享更多</string>
    <string name="menu">菜单</string>
    <string name="image_translate">图片翻译</string>
    <string name="favorites">收藏夹</string>
    <string name="trans_text_input_hint">译你所忆……</string>
    <string name="back">返回</string>
    <string name="source_text">源文本</string>
    <string name="favorite">收藏</string>
    <string name="quit_translating_alert">当前翻译正在进行中，您确定要退出吗？</string>
    <string name="local_plugins">已安装插件</string>
    <string name="plugin_info_template">作者：%s 版本：v%d</string>
    <string name="setting_translate">翻译设置</string>
    <string name="special_thanks">特别感谢</string>
    <string name="float_window">悬浮窗</string>
    <string name="open_float_window">开启悬浮窗</string>
    <string name="setting_time_limited">限时设置</string>
    <string name="failed_to_take_screenshot">截图失败</string>
    <string name="failed_to_save_screenshot">保存截图失败</string>
    <string name="failed_to_view_image">查看图片失败</string>
    <string name="stop">停止捕捉屏幕</string>
    <string name="no_favorite">暂无收藏，去翻译页面添加吧~</string>
    <string name="login_to_use_image_translation">因成本原因，图片翻译功能需要登录后再使用，敬请谅解</string>
    <string name="show_detail_result">详细翻译</string>
    <string name="show_detail_result_desc">为更多的引擎显示详细翻译结果，如注音、词性、示例等，需要引擎接口支持（当前仅有道、谷歌）</string>
    <string name="cancel">取消</string>
    <string name="ig_bottom_placeholder">请输入……</string>
    <string name="chat_input_hint">请输入</string>
    <string name="send">发送</string>
    <string name="delete_message">删除此消息</string>
    <string name="change_username">更改用户名</string>
    <string name="disable_account">注销账户</string>
    <string name="setting_auto_focus_desc">当从后台打开应用主页时，自动进入输入状态</string>
    <string name="app_language">应用显示语言</string>
    <string name="confirm_and_restart_app">确认并重启</string>
    <string name="setting_app_preference">应用</string>
    <string name="recommendation_app">应用推荐</string>
    <string name="developer_mode">开发者模式</string>
    <string name="setting_base_url">BaseUrl</string>
    <string name="open_developer_mode">已开启开发者模式！</string>
    <string name="too_large_image">图片太大了，请尝试裁剪或换用其他引擎</string>
    <string name="developer">开发者</string>
    <string name="discussion">讨论</string>
    <string name="contact_developer_via_email">通过电子邮件联系开发者</string>
    <string name="more_about">更多</string>
    <string name="user_agreement">用户协议</string>
    <string name="join_qq_group_description">和其他用户一起交流</string>
    <string name="contact_developer_via_email_description">发送电子邮箱至 funnysaltyfish@foxmail.com</string>
    <string name="source_code_description">前往 GitHub 查看项目源代码</string>
    <string name="build_type">构建类型：</string>
    <string name="history">历史记录</string>
    <string name="no_history">暂无历史记录</string>
    <string name="logout">退出登录</string>
    <string name="join_group_tip_p1">其他功能开发中，可以加入内测群</string>
    <string name="join_group_tip_p2">抢先体验开发中功能</string>
    <string name="my_description">独立 Android 开发者</string>
    <string name="generate_invite_code">生成邀请码</string>
    <string name="invite_code">邀请码</string>
    <string name="invited_users">邀请列表</string>
    <string name="ok">关闭</string>
    <string name="retry">重试</string>
    <string name="copied_to_clipboard">已复制到剪贴板</string>
    <string name="screenshot_failed">截图失败</string>
    <string name="err_speaking">朗读错误</string>
    <string name="translating">正在翻译……</string>
    <string name="release_to_delete">松手删除</string>
    <string name="remove_float_window">删除浮窗</string>
    <string name="tip_grant_float_window_permission">使用浮窗功能，需要您授权悬浮窗权限。</string>
    <string name="go_to_grant">去开启</string>
    <string name="transtation_floating_window">译站悬浮球</string>
    <string name="oops">糟糕</string>
    <string name="describe_your_operation">（可选）简易描述下您的操作吧~</string>
    <string name="your_contact">（可选）您的联系方式（如qq xxx）</string>
    <string name="tip_app_crash">应用程序发生了崩溃，我们建议您到译站内测群（可在关于页面找到）截图反馈（回复及时）或者发送崩溃报告（处理较慢）。\n\n为什么需要崩溃报告？\n应用崩溃对于使用者和开发者来说都是相当大的灾难，我们都希望将其修复。但是，没有报错原因的崩溃，犹如坏了的无法打开的黑盒子，你只知道出现问题，却不知道是什么问题、问题在哪，难以完成修复。因此，还望您可以提供病症，我们才可以对症下药。\n               \n具体原因如下:\n</string>
    <string name="err_send_crash_report">发送错误报告失败，请联系开发者提交错误信息</string>
    <string name="save_screenshot_success">截图保存成功</string>
    <string name="click_to_generate">点击生成</string>
    <string name="low_price_promotion">低价促销</string>
    <string name="nearly">"约 "</string>
    <string name="price_per_day">" 元/天"</string>
    <string name="beian">APP 备案号</string>
    <string name="flashlight">闪光灯</string>
    <string name="delete_this_history">删除此历史记录</string>
    <string name="failed_to_load_image">加载图片失败</string>
    <string name="start_translate">开始翻译</string>
    <string name="stop_translate">停止翻译</string>
    <string name="browser_url">打开网页</string>
    <string name="whether_selected_all">是否全选</string>
    <string name="clear_histories_success">已清空历史记录</string>
    <string name="confirm_to_delete">残忍删除</string>
    <string name="no_thanks">我再想想</string>
    <string name="preview_theme_here">这里是主题预览</string>
    <string name="default_str">默认</string>
    <string name="dynamic_color">动态取色</string>
    <string name="custom">自定义</string>
    <string name="no_data">没有数据</string>
    <string name="ui_bug_advice"><![CDATA[页面设计 & Bug 提交 & 优化建议]]></string>
    <string name="bug_advice"><![CDATA[多次 Bug 提交 & 优化建议]]></string>
    <string name="all_sponsors">所有帮助过的小伙伴们</string>
    <string name="thanks_for_support">感谢你们的支持</string>
    <string name="failed_to_start_pay">发起支付失败！</string>
    <string name="failed_to_query_order">查询订单状态失败！</string>
    <string name="wallpaper_color_extraction">原生壁纸取色（Android 12+）</string>
    <string name="close">关闭</string>
</resources>